issue #1674: Java 21 - module common